methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting: error: not found: value hunt
		hunt(); 
                ^SlugHunting:5: error: type mismatch;
 found   : Unit
 required: Boolean
  while(!isOverBaggle()){
  ^